# pato

./: .gitignore  RESUME_CONTEXT.md  copilot-instructions.md  design.drawio  proposal.md
plugin-ui/: Cargo.toml
plugin-ui/src/: bindings.rs  lib.rs
plugin-ui/wit/: world.wit
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-ui/: index.css  index.html  index.js
